--- a/RazorApp/Pages/Index.cshtml
+++ b/RazorApp/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     @* <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
 
-    <h1>Microsoft Dev Ops</h1>
+    <h1>Microsoft Azure Dev Ops</h1>
     <img style="width: 200px;" src="https://logodix.com/logo/1872175.png" alt="Logo">
 
     <br />
